# nos

./: .gitignore  MANIFEST.in  README.md  gunicorn_config.py  pyproject.toml  run_gunicorn.bat  run_gunicorn.sh
src/nos/: __init__.py
src/nos/core/: __init__.py
src/nos/core/engine/: __init__.py  base.py  plugin_loader.py  registry.py  reserved_keys.py  workflow_engine.py
src/nos/core/engine/link/: __init__.py  always_link.py  chain_link.py  failure_policy.py  link.py
src/nos/core/engine/node/: __init__.py  node.py  parallel_node.py
src/nos/core/execution_log/: __init__.py  default_sinks.py  event_log_buffer.py  events.py  logger_factory.py  node_run_hooks.py  workflow_run_hooks.py
src/nos/hooks/: __init__.py  manager.py  registrations.py
src/nos/io_adapters/: __init__.py  input_form_mapping.py  output_formats_schema.py
src/nos/platform/: __init__.py  app.py  cli.py  extensions.py  loader_db.py
src/nos/platform/api/: __init__.py  common.py  data_grid_schema.py  form_schema_examples.py  form_wire.py  routes.py  test_datagrid_form.py
src/nos/platform/api/console/: routes.py  (+1 more)
src/nos/platform/config/: base.py  development.py  loader.py  paths.py  production.py
src/nos/platform/console/: __init__.py  commands.py  router.py  schemas.py
src/nos/platform/execution_log/: __init__.py  event_log.py  registry.py
src/nos/platform/execution_process/: runner.py  serialization.py  worker.py  worker_log.py
src/nos/platform/plugins/: __init__.py  cli.py  dependency_graph.py  plugin_base.py  plugin_context.py  plugin_manager.py  sandbox.py  scaffold.py  service_container.py
src/nos/platform/reference_templates/: __init__.py  link_template.py  node_template.py  workflow_template.py
src/nos/platform/services/: __init__.py  chromadb_service.py  config_service.py  errors.py  event_log_factory.py  export_query_service.py  file_write_service.py  logging.py  node_execution_service.py  plugin_code_service.py  plugin_management_service.py  plugin_scaffold_service.py  security.py  sql_service.py  state_service.py  upload_service.py
src/nos/platform/sockets/: __init__.py  console_events.py  engine_events.py  events.py  namespaces.py
src/nos/platform/web/: __init__.py  docs_loader.py  export_docs.py  sse_manager.py
src/nos/plugins/: __init__.py
src/nos/plugins/assistants/: __init__.py
src/nos/plugins/links/: __init__.py
src/nos/plugins/nodes/: __init__.py
src/nos/plugins/old/: __init__.py  html_to_markdown.py  if_then_workflow.py  loop_workflow.py  mapping_example.py  my_first_node.py  standalone_nodes.py  web_scraper.py  web_to_markdown.py
src/nos/plugins/workflows/: __init__.py
(+212 files in other folders)
